client/my-sites/stats/stats-period-navigation/style.scss
.stats-period-navigation {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin: 1.5em 0;
	padding: 0 20px;

	.stats-period-navigation__children {
		text-align: center;
		flex-grow: 1;
	}

	.stats-section-title {
		margin: 0;
	}

	.stats-period-navigation__previous,
	.stats-period-navigation__next {
		cursor: pointer;
		color: var(--color-neutral-50);

		&:hover {
			color: var(--color-accent);
		}

		&.is-disabled {
			visibility: hidden;
		}
	}

	// For feature `stats/new-main-chart`
	&.stats-period-navigation--new-main-chart {
		margin: 0;
		padding: 0;
		align-items: baseline;

		.stats-period-navigation__children {
			text-align: left;
		}

		.stats-section-title {
			font-size: $font-title-large;
			line-height: 40px;
			color: var(--studio-gray-100);
		}

		.stats-date-picker__refresh-status {
			font-size: $font-body-small;
			line-height: 16px;
		}

		.stats-period-navigation__previous,
		.stats-period-navigation__next {
			color: #1e1e1e;
			// Icon size 24x24
			width: 24px;
			height: 24px;
		}

		.stats-period-navigation__next {
			margin-left: 4px;
		}
	}
}

